almost done with homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,117 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FarmAI</title>
+    <title>FarmEase</title>
+    <link rel="stylesheet" href="index.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    
 </head>
 <body>
-    <h1>Hello dear</h1>
+    
+    <div class="universal-navbar">
+
+        <nav class="navbar-container">
+        
+        <div class="logo-section">
+            <img src="./Assets/logo.jpg" width="80px" height="80px">
+            <h1>FarmEase</h1>
+        </div>
+        
+
+        <ul class="nav-link">
+            <li>Home</li>
+            <li>About</li>
+            
+        </ul>
+
+    
+    <div class="nav-button">
+        <button class="login">Login</button>
+        <button class="signup">Signup</button>
+    </div>
+
+</nav>
+
+    </div>
+
+    <div class="part-1-container">
+
+        <div class="quote-container">
+            <p class="quote aladin-regular">Healthy Cattle, Happy Farmers – Manage your herd with <span class="farmease">FarmEase</span></p>
+
+            <button class="explore-btn">Explore More</button>
+
+            <div class="icons">
+
+                <div class="tractor">
+                    <i class="fas fa-tractor tractor" style="font-size: 100px; color: #ffff/0.5"></i>
+                </div>
+
+                <div class="plant">
+                    <i class="fas fa-seedling" style="font-size: 48px; color: green;"></i>
+                    <i class="fas fa-seedling" style="font-size: 48px; color: green;"></i>
+                    <i class="fas fa-seedling" style="font-size: 48px; color: green;"></i>
+                    <i class="fas fa-seedling" style="font-size: 48px; color: green;"></i>
+                    <i class="fas fa-seedling" style="font-size: 48px; color: green;"></i>
+                    <i class="fas fa-seedling" style="font-size: 48px; color: green;"></i>
+                    <i class="fas fa-seedling" style="font-size: 48px; color: green;"></i>
+                    <i class="fas fa-seedling" style="font-size: 48px; color: green;"></i>
+                    <i class="fas fa-seedling" style="font-size: 48px; color: green;"></i>
+                    <i class="fas fa-seedling" style="font-size: 48px; color: green;"></i>
+                    <i class="fas fa-seedling" style="font-size: 48px; color: green;"></i>
+                    <i class="fas fa-seedling" style="font-size: 48px; color: green;"></i>
+                    <i class="fas fa-seedling" style="font-size: 48px; color: green;"></i>
+                    <i class="fas fa-seedling" style="font-size: 48px; color: green;"></i>
+                </div>
+
+
+            </div>
+
+            
+            <!-- <i class="fas fa-person-digging" style="font-size: 48px; color: brown;"></i>
+            <i class="fas fa-cow" style="font-size: 48px; color: black;"></i> -->
+            
+            
+
+        </div>
+
+        <div class="gallery-container">
+
+            <div class="gallery-left">
+                <div class="gallery-left-quote-container">
+                    <p class="pt-serif-regular-italic">With FarmEase, nuture your cattle like family.</p>
+                </div>
+                <img src="./Assets/farmerUncle2.jpg" class="farmer">
+
+            </div>
+
+            <div class="gallery-right">
+                <img src="./Assets/girCow.jpg" class="cow">
+                <div class="gallery-right-quote-container">
+                    <p class="pt-serif-regular-italic">With FarmEase, nuture your cattle like family.</p>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+    <div class="part-2-container">
+        
+            <div class="mission-photo">
+                <div>
+                    <img src="./Assets/mission-photo.png"  class="mission-cow-photo" >
+                </div>
+                
+            </div>
+        
+        
+        <div class="mission-text-container">
+            <h1 class="aladin-regular mission-heading">Our Mission</h1>
+            <p class="pt-serif-regular-italic mission-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptas nemo recusandae incidunt repellat temporibus suscipit dolorem, obcaecati cumque ex molestiae itaque possimus quas vitae rerum placeat voluptatem facere necessitatibus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque dicta deserunt consequuntur eos tempora nostrum asperiores voluptatem, sit, dolores officia ipsum voluptatibus libero perferendis eligendi ab adipisci expedita cupiditate animi.</p>
+        </div>
+        
+    </div>
+
 </body>
 </html>
