--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,8 @@
     
     <div class="nav-button">
         <a href="{{ url_for('login') }}" class="login">Login</a>
-        <button class="signup">Signup</button>
+        <a href="{{ url_for('register') }}" class="signup">Sign Up</a>
+       
     </div>
 
 </nav>
