--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -20,7 +20,7 @@
 
                 <div class="login-image-container">
                     <h1 class="login-left-heading">Healthy Herds, Prosperous Farmers</h1>
-                    <img src="{{ url_for('static', filename='Assets/farmerUncle-copy.jpg') }}" width="400px" height="400px" class="login-image">
+                    <img src="{{ url_for('static', filename='Assets/cow4.jpg') }}" width="400px" height="400px" class="login-image">
 
 
                     <div class="small-msg">
@@ -47,7 +47,7 @@
                     <div class="input-group">
                         <button type="submit" class="login-btn">Login</button>
                     </div>
-                    <p class="signup-link">Don't have an account? <a href="#">Sign up</a></p>
+                    <p class="signup-link">Don't have an account?  <a href="{{ url_for('register') }}" class="signup">Sign Up</a></p>
                 </form>
             </div>
         </div>
