--- a/templates/index.html
+++ b/templates/index.html
@@ -111,7 +111,7 @@
         
         
         <div class="mission-text-container">
-            <h1 class="aladin-regular mission-heading">Our Mission</h1>
+            <h1 class="aladin-regular mission-heading">Agenda</h1>
             <p class="pt-serif-regular-italic mission-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptas nemo recusandae incidunt repellat temporibus suscipit dolorem, obcaecati cumque ex molestiae itaque possimus quas vitae rerum placeat voluptatem facere necessitatibus. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eaque dicta deserunt consequuntur eos tempora nostrum asperiores voluptatem, sit, dolores officia ipsum voluptatibus libero perferendis eligendi ab adipisci expedita cupiditate animi.</p>
         </div>
         
