--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
         <ul class="nav-link">
             <li>Home</li>
             <li>About</li>
+            <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
             
         </ul>
 
