--- a/templates/register/register.html
+++ b/templates/register/register.html
@@ -28,7 +28,7 @@
 
             <div class="signup-right">
                 <div class="signup-container">
-                    <form class="signup-form">
+                    <form class="signup-form" method="post" action="">
                         <h2>Register</h2>
                         <div class="form-grid">
                            
