--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -34,7 +34,7 @@
 
         <div class="login-right">
             <div class="login-container">
-                <form class="login-form">
+                <form class="login-form" method="post" action="">
                     <h2>Login</h2>
                     <div class="input-group">
                         <label for="username">Username</label>
@@ -47,7 +47,7 @@
                     <div class="input-group">
                         <button type="submit" class="login-btn">Login</button>
                     </div>
-                    <p class="signup-link">Don't have an account?  <a href="{{ url_for('register') }}" class="signup">Sign Up</a></p>
+                    <p class="signup-link">Don't have an account?  <a href="{{ url_for('dashboard') }}" class="signup">Sign Up</a></p>
                 </form>
             </div>
         </div>
